list. of to arrays.aslist